Create ViewController Success

--- a/AuthenSSRU/Base.lproj/Main.storyboard
+++ b/AuthenSSRU/Base.lproj/Main.storyboard
@@ -107,6 +107,21 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="133.92857142857142"/>
         </scene>
+        <!--Register-->
+        <scene sceneID="Meg-Xq-wSj">
+            <objects>
+                <viewController title="Register" id="Fdv-n9-PM2" customClass="RegisterViewController" customModule="AuthenSSRU" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qB7-ht-GAt">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="teU-Dy-PdN"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FYu-NS-D3z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1155" y="134"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Logo" width="170.5" height="128"/>
