--- a/AuthenSSRU/Base.lproj/Main.storyboard
+++ b/AuthenSSRU/Base.lproj/Main.storyboard
@@ -121,11 +121,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Wallpaper" translatesAutoresizingMaskIntoConstraints="NO" id="a9q-Ec-Jzp">
+                            <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Wallpaper" translatesAutoresizingMaskIntoConstraints="NO" id="a9q-Ec-Jzp">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9pm-Uf-tgc">
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9pm-Uf-tgc">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <items>
@@ -143,61 +145,29 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="abk-Fs-gx7">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="abk-Fs-gx7">
                                 <rect key="frame" x="49" y="102" width="316" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="34x-Lb-AGT"/>
-                                    <constraint firstAttribute="width" constant="316" id="hnS-vM-4Vf"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="316" id="lrM-cm-IvK"/>
-                                    <constraint firstAttribute="height" constant="30" id="wBf-YX-DE0"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="41u-Lp-WO5">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="41u-Lp-WO5">
                                 <rect key="frame" x="49" y="154" width="316" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="ACg-6q-E2P"/>
-                                    <constraint firstAttribute="height" constant="30" id="YDw-Ub-HnS"/>
-                                    <constraint firstAttribute="width" constant="316" id="c0R-wH-Nxo"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="316" id="hCX-MF-kAx"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zWh-hG-d42">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zWh-hG-d42">
                                 <rect key="frame" x="49" y="214" width="316" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="316" id="nMn-2y-hLj"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="pNX-0P-2oe"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="316" id="px5-e7-J4M"/>
-                                    <constraint firstAttribute="height" constant="30" id="yg8-0W-8qI"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="a9q-Ec-Jzp" firstAttribute="leading" secondItem="teU-Dy-PdN" secondAttribute="leading" id="16e-Pc-Ggd"/>
-                            <constraint firstItem="a9q-Ec-Jzp" firstAttribute="bottom" secondItem="teU-Dy-PdN" secondAttribute="bottom" id="2jo-m5-z0t"/>
-                            <constraint firstItem="9pm-Uf-tgc" firstAttribute="centerX" secondItem="qB7-ht-GAt" secondAttribute="centerX" id="65I-3G-xdN"/>
-                            <constraint firstItem="abk-Fs-gx7" firstAttribute="centerX" secondItem="qB7-ht-GAt" secondAttribute="centerX" id="8I1-rl-02R"/>
-                            <constraint firstItem="41u-Lp-WO5" firstAttribute="centerX" secondItem="qB7-ht-GAt" secondAttribute="centerX" id="Gyu-ER-6fu"/>
-                            <constraint firstItem="abk-Fs-gx7" firstAttribute="top" secondItem="9pm-Uf-tgc" secondAttribute="bottom" constant="14" id="LoW-GI-BYP"/>
-                            <constraint firstItem="a9q-Ec-Jzp" firstAttribute="top" secondItem="9pm-Uf-tgc" secondAttribute="bottom" id="PQ5-1C-BUc"/>
-                            <constraint firstItem="zWh-hG-d42" firstAttribute="centerX" secondItem="qB7-ht-GAt" secondAttribute="centerX" id="WZ2-f7-jAT"/>
-                            <constraint firstItem="9pm-Uf-tgc" firstAttribute="top" secondItem="teU-Dy-PdN" secondAttribute="top" id="efh-d9-6k8"/>
-                            <constraint firstItem="41u-Lp-WO5" firstAttribute="top" secondItem="abk-Fs-gx7" secondAttribute="bottom" constant="22" id="jFj-Vx-MJ7"/>
-                            <constraint firstItem="a9q-Ec-Jzp" firstAttribute="trailing" secondItem="teU-Dy-PdN" secondAttribute="trailing" id="ler-M1-n8A"/>
-                            <constraint firstItem="9pm-Uf-tgc" firstAttribute="trailing" secondItem="teU-Dy-PdN" secondAttribute="trailing" id="sKm-O7-HqS"/>
-                            <constraint firstItem="9pm-Uf-tgc" firstAttribute="leading" secondItem="teU-Dy-PdN" secondAttribute="leading" id="uEK-tt-sVY"/>
-                            <constraint firstItem="a9q-Ec-Jzp" firstAttribute="centerX" secondItem="qB7-ht-GAt" secondAttribute="centerX" id="xcF-Un-Lov"/>
-                            <constraint firstItem="zWh-hG-d42" firstAttribute="top" secondItem="41u-Lp-WO5" secondAttribute="bottom" constant="30" id="ymK-XH-jnO"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="teU-Dy-PdN"/>
                     </view>
                     <connections>
